updated Login and logout

--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -8,12 +8,12 @@
  </head>
  <body>
    <div style="text-align: center;">
-      <h1 style="font-size: xx-large;font-weight: bolder;">Sign In</h1>
+      <h1 style="font-size: xx-large;font-weight: bolder;">Log In</h1>
          <div>
             <form style="display: flex; flex-direction: column;gap: 1rem; align-items: center;" action="/dashboard" method="post">
             <input type="text" placeholder="Admin Username" name="adminname">
             <input type="password" placeholder="Admin Password" name="adminpass">
-            <button type="submit">Sign In</button>
+            <button type="submit">Log In</button>
             </form>
          </div>
    </div>
